--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -14,8 +14,8 @@
 </head>
 <body>
 	<div id="appContainer">
-		<div id="pageOverlayAtPageLoad">
-			<div style="width: 50%; margin: 0 auto; text-align: center; padding-top: 20%; font-family: Raleway-Regular; font-size: 3em;">Ładowanie aplikacji...</div>
+		<div id="pageOverlayAtSiteLoad">
+			<div id="pageOverlayAtSiteLoadText">ŁADOWANIE APLIKACJI...</div>
 		</div>
 		<div id="spinnerContainer" style="display: none;">
 			<span id="spinnerText"></span>
