--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -15,7 +15,9 @@
 <body>
 	<div id="appContainer">
 		<div id="pageOverlayAtSiteLoad">
-			<div id="pageOverlayAtSiteLoadText">ŁADOWANIE APLIKACJI...</div>
+			<div id="pageOverlayAtSiteLoadText">
+
+			</div>
 		</div>
 		<div id="spinnerContainer" style="display: none;">
 			<span id="spinnerText"></span>
