--- a/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
@@ -20,6 +20,10 @@ MEDIA QUERIES
     margin-left: 0;
   }
 
+  #pageOverlayAtSiteLoad {
+    left: 0;
+  }
+
   .display-events-overview-item-list {
     padding-left: 2px;
     padding-right: 2px;
