--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -5,14 +5,17 @@
 		</div>
 	</header>
 	@Html.Partial( "_LobbyLoginBar" )
-	<section id="lobbyQuoteAndNavSection">
-		<nav id="lobbyNavContainer">
-			<a href="#0" class="selected-nav-link">Strona Główna</a>
-			<a href="#1">Kalendarz</a>
-			<a href="#2">Dziennik</a>
-		</nav>
-		<p class="lobby-quote">Twój osobisty kalendarz stworzony na miare Twoich potrzeb.</p>
 
+  <nav id="lobbyNavContainer">
+    <a href="#0" class="selected-nav-link">Strona Główna</a>
+    <a href="#1">Kalendarz</a>
+    <a href="#2">Dziennik</a>
+  </nav>
+
+  @Html.Partial("_Login", new KalendarzKarieryData.Models.AccountModels.LoginModel())
+  @Html.Partial("_Register", new KalendarzKarieryData.Models.ViewModels.RegisterViewModel())
+	<section id="lobbyQuoteSection">
+		<p class="lobby-quote">Twój osobisty kalendarz stworzony na miare Twoich potrzeb.</p>
 	</section>
 </section>
 <section class="dz-row" style="height: 100px;">
@@ -27,7 +30,7 @@
 		<div id="lobbyDisplayEventsOverviewContainer" class="display-events-overview-container" data-bind="visible: $root.lobbyPagePublicEventListMenu.isOpen()">
 			<header class="display-events-overview-header">
 				<span class="display-events-header-menu-title selected hover-cursor-pointer">Publiczne wydarzenia</span>
-				<div class="close-btn-x hover-cursor-pointer" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick">x</div>
+				<span class="btn-close red-color hover-cursor-pointer" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick">x</span>
 			</header>
 			@Html.Partial( "_LobbyPublicEventList" )
 		</div>
