--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyPublicEventList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyPublicEventList.cshtml
@@ -12,10 +12,10 @@
 			<div class="overview-item-inner-wrapper" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
 				<div class="inline-block width-49per">
 					<div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
-					<div class="list-item-date">
+					<span class="list-item-date">
 						<span class="list-item-other" data-bind="text: startDate.displayFullDate()"></span>
 						<span class="list-item-other" data-bind="text: startDate.displayFullTime()"></span>
-					</div>
+					</span>
 				</div>
 				<div class="inline-block width-49per">
           <span class="list-item-title" data-bind="text: name"></span>
