--- a/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
@@ -109,6 +109,10 @@ MEDIA QUERIES
 	#lobbyNavContainer {
 		text-align: center;
 	}
+
+	#loginFormBtn {
+		margin-right: 0;
+	}
 }
 
 @media only screen and (max-width: 767px) and (orientation: portrait) {
@@ -122,10 +126,10 @@ MEDIA QUERIES
 	}
 
 	.flat-form input[type=text], .flat-form input[type=password], .flat-form textarea, .flat-form select {
-		width: 100%;
+		width: 90%;
 	}
 
 	.div-separator {
-		margin-top: 20px;
+		margin-left: 0;
 	}
 }
