--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -146,7 +146,7 @@ fieldset {
 }
 
 #lobbyNavContainer {
-	margin: 0 auto;
+	margin: 0 10%;
 	font-size: 1.2em;
 	border-top: 1px solid white;
 	padding-top: 30px;
