--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -20,9 +20,9 @@
 
 </div>
 
-@Scripts.Render("~/bundles/scripts")
+@*@Scripts.Render("~/bundles/scripts")*@
 
-@*@Scripts.Render( "~/bundles/jquery" )
+@Scripts.Render( "~/bundles/jquery" )
 @Scripts.Render( "~/bundles/jqueryval" )
 @Scripts.Render( "~/bundles/modernizr" )
 @Scripts.Render( "~/bundles/knockout" )
@@ -53,7 +53,7 @@
 <script src="~/Scripts/JSManagers/EventManager.js"></script>
 <script src="~/Scripts/JSManagers/NoteManager.js"></script>
 
-<script src="~/Scripts/Program.js"></script>*@
+<script src="~/Scripts/Program.js"></script>
 
 <script type="text/javascript">
 
