--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Register.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Register.cshtml
@@ -1,8 +1,8 @@
 ﻿@model KalendarzKarieryData.Models.ViewModels.RegisterViewModel
 
-<div id="registerPageContainer" class="slick-contact-form">
+<div id="registerPageContainer" class="flat-form">
 	<div class="form-header">
-		<div id="btnClose-registerPopup" data-bind="click: closeRegisterPopupOnClick" class="btn-close hover-cursor-pointer"><span class="close-text">zamknij</span></div>
+		<span data-bind="click: closeRegisterPopupOnClick" class="btn-close red-color hover-cursor-pointer">x</span>
 	</div>
 	<div class="form-body">
 		@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { id = "registerForm" }))
@@ -11,7 +11,6 @@
 
 			<fieldset>
 				<legend>Rejestracja</legend>
-
 				<div class="summary-validation-errors"></div>
 				<ol>
 					<li>
@@ -20,7 +19,7 @@
 						<div>
 							@Html.ValidationMessageFor(m => m.RegisterModel.UserName)
 						</div>
-						@Html.TextBoxFor(m => m.RegisterModel.UserName, new { maxlength = 30 })
+						@Html.TextBoxFor(m => m.RegisterModel.UserName, new { maxlength = 30 })<span class="exclamation-mark">!</span>
 
 					</li>
 					<li>
@@ -29,7 +28,7 @@
 						<div>
 							@Html.ValidationMessageFor(m => m.RegisterModel.Password)
 						</div>
-						@Html.PasswordFor(m => m.RegisterModel.Password, new { maxlength = 30 })
+						@Html.PasswordFor(m => m.RegisterModel.Password, new { maxlength = 30 })<span class="exclamation-mark">!</span>
 
 					</li>
 					<li>
@@ -38,7 +37,7 @@
 						<div>
 							@Html.ValidationMessageFor(m => m.RegisterModel.ConfirmPassword)
 						</div>
-						@Html.PasswordFor(m => m.RegisterModel.ConfirmPassword, new { maxlength = 30 })
+						@Html.PasswordFor(m => m.RegisterModel.ConfirmPassword, new { maxlength = 30 })<span class="exclamation-mark">!</span>
 
 					</li>
 					<li>
@@ -46,7 +45,7 @@
 						<div>
 							@Html.ValidationMessageFor(m => m.User.Email)
 						</div>
-						@Html.TextBoxFor(m => m.User.Email, new { maxlength = 30 })
+						@Html.TextBoxFor(m => m.User.Email, new { maxlength = 30 })<span class="exclamation-mark">!</span>
 
 					</li>
 					<li>
@@ -55,7 +54,7 @@
 						<div>
 							@Html.ValidationMessageFor(m => m.User.FirstName)
 						</div>
-						@Html.TextBoxFor(m => m.User.FirstName, new { maxlength = 30 })
+						@Html.TextBoxFor(m => m.User.FirstName, new { maxlength = 30 })<span class="exclamation-mark">!</span>
 
 					</li>
 					<li>
@@ -63,7 +62,7 @@
 						<div>
 							@Html.ValidationMessageFor(m => m.User.LastName)
 						</div>
-						@Html.TextBoxFor(m => m.User.LastName, new { maxlength = 30 })
+						@Html.TextBoxFor(m => m.User.LastName, new { maxlength = 30 })<span class="exclamation-mark">!</span>
 
 					</li>
 					<li>
@@ -72,13 +71,13 @@
 							@Html.ValidationMessageFor(m => m.User.Gender)
 						</div>
 						@Html.DropDownList("User.Gender",
-	new SelectList(new Dictionary<string, string> 
+    new SelectList(new Dictionary<string, string>
         {
             {"Mężczyzna", "m"},
             {"Kobieta", "k"},
         },
-		"Value", "Key")
-, new { style="width:130px;"})
+        "Value", "Key")
+, new { style = "width:130px;" })<span class="exclamation-mark">!</span>
 					</li>
 					<li>
 
@@ -96,7 +95,7 @@
 						<span id="birthDateValidationErrorMsg" class="field-validation-error" style="display:none">Nieprawidłowa data.</span>
 						</div>
 
-						@Html.TextBoxFor(m => m.BirthDateModel.Day , string.Empty, new { id="birthDateDayTxtBox", @class = "register-birthdate-txtbox", placeholder = "dzień", maxlength = 2 }) <span style="color: #b3aba1;"> / </span>@Html.TextBoxFor(m => m.BirthDateModel.Month, string.Empty, new { id="birthDateMonthTxtBox", @class = "register-birthdate-txtbox", placeholder = "miesiąc", maxlength = 2 }) <span style="color: #b3aba1;"> / </span>@Html.TextBoxFor(m => m.BirthDateModel.Year, string.Empty, new { id="birthDateYearTxtBox", @class = "register-birthdate-txtbox", placeholder = "rok", maxlength = 4 })
+						@Html.TextBoxFor(m => m.BirthDateModel.Day , string.Empty, new { id="birthDateDayTxtBox", @class = "register-birthdate-txtbox", placeholder = "dzień", maxlength = 2 }) <span style="color: #b3aba1;"> / </span>@Html.TextBoxFor(m => m.BirthDateModel.Month, string.Empty, new { id="birthDateMonthTxtBox", @class = "register-birthdate-txtbox", placeholder = "miesiąc", maxlength = 2 }) <span style="color: #b3aba1;"> / </span>@Html.TextBoxFor(m => m.BirthDateModel.Year, string.Empty, new { id = "birthDateYearTxtBox", @class = "register-birthdate-txtbox", placeholder = "rok", maxlength = 4 })<span class="exclamation-mark">!</span>
 
 					</li>
 					<li>
