--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -331,13 +331,10 @@ fieldset {
 }
 
 .exclamation-mark {
-  color: #AFAFAF;
-  padding: 4px 12px;
-  margin-left: 10px;
-  font-size: .8em;
-  border: 1px solid #D4D4D4;
+  color: #B9B9B9;
+  padding: 8px;
+  font-size: 1em;
   vertical-align: middle;
-  border-radius: 4px;
 }
 
 /*Calendar page*/
