--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Register.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Register.cshtml
@@ -19,7 +19,7 @@
 						<div>
 							@Html.ValidationMessageFor(m => m.RegisterModel.UserName)
 						</div>
-						@Html.TextBoxFor(m => m.RegisterModel.UserName, new { maxlength = 30 })<span class="exclamation-mark">!</span>
+           	@Html.TextBoxFor(m => m.RegisterModel.UserName, new { maxlength = 30 })<span class="exclamation-mark">*</span>
 
 					</li>
 					<li>
@@ -28,7 +28,7 @@
 						<div>
 							@Html.ValidationMessageFor(m => m.RegisterModel.Password)
 						</div>
-						@Html.PasswordFor(m => m.RegisterModel.Password, new { maxlength = 30 })<span class="exclamation-mark">!</span>
+						@Html.PasswordFor(m => m.RegisterModel.Password, new { maxlength = 30 })<span class="exclamation-mark">*</span>
 
 					</li>
 					<li>
@@ -37,7 +37,7 @@
 						<div>
 							@Html.ValidationMessageFor(m => m.RegisterModel.ConfirmPassword)
 						</div>
-						@Html.PasswordFor(m => m.RegisterModel.ConfirmPassword, new { maxlength = 30 })<span class="exclamation-mark">!</span>
+						@Html.PasswordFor(m => m.RegisterModel.ConfirmPassword, new { maxlength = 30 })<span class="exclamation-mark">*</span>
 
 					</li>
 					<li>
@@ -45,7 +45,7 @@
 						<div>
 							@Html.ValidationMessageFor(m => m.User.Email)
 						</div>
-						@Html.TextBoxFor(m => m.User.Email, new { maxlength = 30 })<span class="exclamation-mark">!</span>
+						@Html.TextBoxFor(m => m.User.Email, new { maxlength = 30 })<span class="exclamation-mark">*</span>
 
 					</li>
 					<li>
@@ -54,7 +54,7 @@
 						<div>
 							@Html.ValidationMessageFor(m => m.User.FirstName)
 						</div>
-						@Html.TextBoxFor(m => m.User.FirstName, new { maxlength = 30 })<span class="exclamation-mark">!</span>
+						@Html.TextBoxFor(m => m.User.FirstName, new { maxlength = 30 })<span class="exclamation-mark">*</span>
 
 					</li>
 					<li>
@@ -62,7 +62,7 @@
 						<div>
 							@Html.ValidationMessageFor(m => m.User.LastName)
 						</div>
-						@Html.TextBoxFor(m => m.User.LastName, new { maxlength = 30 })<span class="exclamation-mark">!</span>
+						@Html.TextBoxFor(m => m.User.LastName, new { maxlength = 30 })<span class="exclamation-mark">*</span>
 
 					</li>
 					<li>
@@ -77,7 +77,7 @@
             {"Kobieta", "k"},
         },
         "Value", "Key")
-, new { style = "width:130px;" })<span class="exclamation-mark">!</span>
+, new { style = "width:130px;" })<span class="exclamation-mark">*</span>
 					</li>
 					<li>
 
@@ -95,7 +95,7 @@
 						<span id="birthDateValidationErrorMsg" class="field-validation-error" style="display:none">Nieprawidłowa data.</span>
 						</div>
 
-						@Html.TextBoxFor(m => m.BirthDateModel.Day , string.Empty, new { id="birthDateDayTxtBox", @class = "register-birthdate-txtbox", placeholder = "dzień", maxlength = 2 }) <span style="color: #b3aba1;"> / </span>@Html.TextBoxFor(m => m.BirthDateModel.Month, string.Empty, new { id="birthDateMonthTxtBox", @class = "register-birthdate-txtbox", placeholder = "miesiąc", maxlength = 2 }) <span style="color: #b3aba1;"> / </span>@Html.TextBoxFor(m => m.BirthDateModel.Year, string.Empty, new { id = "birthDateYearTxtBox", @class = "register-birthdate-txtbox", placeholder = "rok", maxlength = 4 })<span class="exclamation-mark">!</span>
+						@Html.TextBoxFor(m => m.BirthDateModel.Day , string.Empty, new { id="birthDateDayTxtBox", @class = "register-birthdate-txtbox", placeholder = "dzień", maxlength = 2 }) <span style="color: #b3aba1;"> / </span>@Html.TextBoxFor(m => m.BirthDateModel.Month, string.Empty, new { id="birthDateMonthTxtBox", @class = "register-birthdate-txtbox", placeholder = "miesiąc", maxlength = 2 }) <span style="color: #b3aba1;"> / </span>@Html.TextBoxFor(m => m.BirthDateModel.Year, string.Empty, new { id = "birthDateYearTxtBox", @class = "register-birthdate-txtbox", placeholder = "rok", maxlength = 4 })<span class="exclamation-mark">*</span>
 
 					</li>
 					<li>
@@ -122,7 +122,7 @@
 						<div>
 							@Html.ValidationMessageFor(m => m.User.Address.ZipCode)
 						</div>
-						@Html.TextBoxFor(m => m.User.Address.ZipCode, new { maxlength = 6, placeholder="00-000", style="width:50px !important;" })
+						@Html.TextBoxFor(m => m.User.Address.ZipCode, new { maxlength = 6, placeholder="00-000", style="width:50px *important;" })
 
 					</li>
 					<li>
